crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__comments__comments_cnot.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/comments/comments_cnot.qasm
expect-parse: Ok
--- parser ---
ok: true
panicked: false
errors: 0
--- ast ---
SOURCE_FILE@0..294: 
OPENQASM 3.0;
// Line comment before include
include "stdgates.inc"; // Inline comment
/* Block comment before declaration */
qubit[2] q; /* Inline block comment */

// Comment before gate
h q[0]; // Gate with comment
/* Multi-line block comment
   spanning multiple lines */
cnot q[0], q[1];

VERSION_STRING@1..14: OPENQASM 3.0;
INCLUDE@46..69: include "stdgates.inc";
FILE_PATH@54..68: "stdgates.inc"
QUANTUM_DECLARATION_STMT@127..138: qubit[2] q;
QUBIT_TYPE@127..135: qubit[2]
DESIGNATOR@132..135: [2]
LITERAL@133..134: 2
NAME@136..137: q
EXPR_STMT@190..197: h q[0];
GATE_CALL_EXPR@190..196: h q[0]
IDENTIFIER@190..191: h
QUBIT_LIST@192..196: q[0]
INDEXED_IDENTIFIER@192..196: q[0]
IDENTIFIER@192..193: q
INDEX_OPERATOR@193..196: [0]
EXPRESSION_LIST@194..195: 0
LITERAL@194..195: 0
EXPR_STMT@277..293: cnot q[0], q[1];
GATE_CALL_EXPR@277..292: cnot q[0], q[1]
IDENTIFIER@277..281: cnot
QUBIT_LIST@282..292: q[0], q[1]
INDEXED_IDENTIFIER@282..286: q[0]
IDENTIFIER@282..283: q
INDEX_OPERATOR@283..286: [0]
EXPRESSION_LIST@284..285: 0
LITERAL@284..285: 0
INDEXED_IDENTIFIER@288..292: q[1]
IDENTIFIER@288..289: q
INDEX_OPERATOR@289..292: [1]
EXPRESSION_LIST@290..291: 1
LITERAL@290..291: 1
